--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     <meta name="description" content="{{ site.data.project.description }}">
     {% endif %}
     {% unless site.data.dev.dev_mode %}
-    <base href="https://flysystem.thephpleague.com/" />
+    <base href="https://docs.aspirepress.org/" />
     {% endunless %}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css" />
     <link rel="stylesheet" href="{{ site.data.manifest['docs.css'] }}"/>
