--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,13 +47,9 @@
     <div class="flex flex-grow">
         <nav role="navigation" id="navigation" class="md:w-4/14 w-full lg:relative hidden md:block font-heading pt-2">
             <menu class="pl-0 mt-0">
-                {% if page.url contains "/v1/" %}
-                    {% assign menu = site.data.menu_v1 %}
-                {% else %}
-                    {% assign menu = site.data.menu_v2 %}
-                {% endif %}
+                {% assign menu = site.data.menu_v2 %}
                 {% for section in menu %}
-                <h2 class="tracking-wide mb-0 mt-0 text-xs leading-loose tracking-wide text-indigo-light uppercase">{{ section[0] }}</h2>
+                <h2 class="tracking-wide mb-0 mt-0 text-md leading-loose tracking-wide text-indigo-light uppercase">{{ section[0] }}</h2>
                 <ul class="list-reset mb-6 block pr-6">
                     {% for link in section[1] %}
                     <li class="block">
