Updating text sizing for h2

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
             <menu class="pl-0 mt-0">
                 {% assign menu = site.data.menu_v2 %}
                 {% for section in menu %}
-                <h2 class="tracking-wide mb-0 mt-0 text-md leading-loose tracking-wide text-indigo-light uppercase">{{ section[0] }}</h2>
+                <h2 class="tracking-wide mb-0 mt-0 text-sm leading-loose tracking-wide text-indigo-light uppercase">{{ section[0] }}</h2>
                 <ul class="list-reset mb-6 block pr-6">
                     {% for link in section[1] %}
                     <li class="block">
