Restoring the Javascript that powers the site

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,8 +79,8 @@
 <footer class="bg-indigo-darkest text-white">
 
 </footer>
-<!--<script type="text/javascript" src="{{ site.data.manifest['docs.js'] }}"></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
+<script type="text/javascript" src="{{ site.data.manifest['docs.js'] }}"></script>
+<!--<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
 <script type="text/javascript"> docsearch({
     apiKey: 'be7daf2d7afded0acb0589a0e304a423',
     indexName: 'filesystem_thephpleague',
