--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
     <div class="max-w-2xl mx-auto px-4 py-2">
         <div class="flex items-center flex-no-shrink top-0">
             <a href="/" class="flex items-center h-14">
-                <img class="mr-3 h-14" height="120"width="177" src="/img/aspirepress.png"/>
+                <img class="mr-3 h-14" src="/img/aspirepress.png"/>
                 <span class="pr-2 font-normal overflow-hidden font-heading text-3xl text-indigo-darkest -sm:hidden">
                     AspirePress Docs
                 </span>
