changed mermaid import to latest disty

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
     -->
 
     <script type="module">
-        import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@11.3.0/+esm'
+        import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js'
         mermaid.initialize({ startOnLoad: true, theme: 'neutral' })
         await mermaid.run({ querySelector: 'code.language-mermaid' })
     </script>
