--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,7 +69,7 @@
                 <div class="flex-no-shrink flex-no-grow h-10 px-4 relative">
                     <input id="global-search"
                         class="focus:outline-0 h-10 py-2 pl-8 pr-2 text-indigo-darker rounded bg-indigo-lightest focus:border-indigo-light focus:bg-white focus:placeholder-none max-w-xs w-full appearance-none"
-                        type="text" placeholder="Search the docs" />
+                        type="text" placeholder="Search the docs" aria-label="Search the docs"/>
                     <span class="pointer-events-none absolute inset-y-0 left-0 pl-6 flex items-center">
                         <svg class="fill-current pointer-events-none text-indigo-light w-4 h-4 border-transparent border"
                             xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
