adding CC BY-SA 4.0
Signed-off-by: Amnesty AM <37809410+AmnestyAM@users.noreply.github.com>

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+f<!DOCTYPE html>
 <html>
 
 <head>
@@ -127,6 +127,8 @@
                     endif %}{% if page.url contains "/v1/" %} (V1){% endif %}</h1>
                 {% endunless %}
                 {{ content }}
+                <hr>
+                <p>Except where otherwise noted, content on this site is licensed under a <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution 4.0 International license</a> CC BY-SA 4.0.</p>
             </article>
         </div>
     </main>
