updated license wording
Signed-off-by: Amnesty AM <37809410+AmnestyAM@users.noreply.github.com>

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -128,7 +128,7 @@
                 {% endunless %}
                 {{ content }}
                 <hr>
-                <p>Except where otherwise noted, content on this site is licensed under a <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution 4.0 International license</a> CC BY-SA 4.0.</p>
+                <p>Information on this page is licensed under a <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution 4.0 International license CC BY-SA 4.0</a>.</p>
             </article>
         </div>
     </main>
