--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -60,7 +60,7 @@
         <div class="max-w-2xl mx-auto px-4 py-2">
             <div class="flex items-center flex-no-shrink top-0">
                 <a href="/" class="flex items-center h-14">
-                    <img class="mr-3 h-14" src="/img/aspirepress.png" />
+                    <img class="mr-3 h-14" src="/img/aspirepress.png" alt="AspirePress Logo"/>
                     <span class="pr-2 font-normal overflow-hidden font-heading text-3xl text-indigo-darkest -sm:hidden">
                         AspirePress Docs
                     </span>
@@ -69,7 +69,7 @@
                 <div class="flex-no-shrink flex-no-grow h-10 px-4 relative">
                     <input id="global-search"
                         class="focus:outline-0 h-10 py-2 pl-8 pr-2 text-indigo-darker rounded bg-indigo-lightest focus:border-indigo-light focus:bg-white focus:placeholder-none max-w-xs w-full appearance-none"
-                        type="text" placeholder="Search the docs" />
+                        type="text" placeholder="Search the docs" aria-label="Search the docs"/>
                     <span class="pointer-events-none absolute inset-y-0 left-0 pl-6 flex items-center">
                         <svg class="fill-current pointer-events-none text-indigo-light w-4 h-4 border-transparent border"
                             xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
@@ -100,7 +100,7 @@
                 <menu class="pl-0 mt-0">
                     {% assign menu = site.data.menu_v2 %}
                     {% for section in menu %}
-                    <h2 class="tracking-wide mb-0 mt-0 text-sm leading-loose tracking-wide text-indigo-light uppercase">
+                    <h2 class="tracking-wide mb-0 mt-0 text-sm leading-loose tracking-wide text-indigo uppercase">
                         {{ section[0] }}</h2>
                     <ul class="list-reset mb-6 block pr-6">
                         {% for link in section[1] %}
