Update default.html (#47)
Signed-off-by: Amnesty AM <37809410+AmnestyAM@users.noreply.github.com>

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,7 +69,8 @@
                     </span>
                 </a>
                 <div class="flex-grow"></div>
-                <div class="flex-no-shrink flex-no-grow h-10 px-4 relative">
+                <!-- Comment out the search for now, its not yet hooked up to Agolia
+               <div class="flex-no-shrink flex-no-grow h-10 px-4 relative">
                     <input id="global-search"
                         class="focus:outline-0 h-10 py-2 pl-8 pr-2 text-indigo-darker rounded bg-indigo-lightest focus:border-indigo-light focus:bg-white focus:placeholder-none max-w-xs w-full appearance-none"
                         type="text" placeholder="Search the docs" aria-label="Search the docs"/>
@@ -81,6 +82,7 @@
                         </svg>
                     </span>
                 </div>
+                -->
                 <a href="#" id="menu-toggle"
                     class="block md:hidden h-8 w-8 border p-1 border-transparent text-grey hover:text-grey menu-closed">
                     <svg class="menu-closed:shown fill-current h-full w-full" xmlns="http://www.w3.org/2000/svg"
